// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test collapsible component: CollapsibleView should render correctly '<CollapsibleView />' when content is expanded. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="is-flex is-flex-direction-column is-align-items-center"
      >
        <div
          class="collapsible-transition"
          style="height: 20px;"
        >
          <div
            class="collapsible-content"
          >
            <div
              class="collapsible-gradient collapsible-gradient-expanded"
              style="height: 20px;"
            />
            <div>
              <p>
                Test line 1
              </p>
              <p>
                Test line 2
              </p>
              <p>
                Test line 3
              </p>
            </div>
          </div>
        </div>
        <button
          class="icon-button collapsible-expand collapsible-expand-open is-flex is-align-self-center"
          style="height: 48px; width: 48px;"
        >
          <div>
            <svg
              class="is-flex is-align-self-center has-text-grey"
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="is-flex is-flex-direction-column is-align-items-center"
    >
      <div
        class="collapsible-transition"
        style="height: 20px;"
      >
        <div
          class="collapsible-content"
        >
          <div
            class="collapsible-gradient collapsible-gradient-expanded"
            style="height: 20px;"
          />
          <div>
            <p>
              Test line 1
            </p>
            <p>
              Test line 2
            </p>
            <p>
              Test line 3
            </p>
          </div>
        </div>
      </div>
      <button
        class="icon-button collapsible-expand collapsible-expand-open is-flex is-align-self-center"
        style="height: 48px; width: 48px;"
      >
        <div>
          <svg
            class="is-flex is-align-self-center has-text-grey"
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test collapsible component: CollapsibleView should render correctly '<CollapsibleView />' when content is not expanded. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="is-flex is-flex-direction-column is-align-items-center"
      >
        <div
          class="collapsible-transition"
          style="height: 20px;"
        >
          <div
            class="collapsible-content"
          >
            <div
              class="collapsible-gradient"
              style="height: 20px;"
            />
            <div>
              <p>
                Test line 1
              </p>
              <p>
                Test line 2
              </p>
              <p>
                Test line 3
              </p>
            </div>
          </div>
        </div>
        <button
          class="icon-button collapsible-expand is-flex is-align-self-center"
          style="height: 48px; width: 48px;"
        >
          <div>
            <svg
              class="is-flex is-align-self-center has-text-grey"
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                style="fill: currentColor;"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="is-flex is-flex-direction-column is-align-items-center"
    >
      <div
        class="collapsible-transition"
        style="height: 20px;"
      >
        <div
          class="collapsible-content"
        >
          <div
            class="collapsible-gradient"
            style="height: 20px;"
          />
          <div>
            <p>
              Test line 1
            </p>
            <p>
              Test line 2
            </p>
            <p>
              Test line 3
            </p>
          </div>
        </div>
      </div>
      <button
        class="icon-button collapsible-expand is-flex is-align-self-center"
        style="height: 48px; width: 48px;"
      >
        <div>
          <svg
            class="is-flex is-align-self-center has-text-grey"
            role="presentation"
            style="width: 1.5rem; height: 1.5rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
